--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "generate:pet-store-api": "generate-api.sh"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^19.2.4",
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
+    "@openapitools/openapi-generator-cli": "^2.18.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
